# tree_hugger

./: CMakeLists.txt  README.md
include/: stack.h  tree_hugger.h
src/: main.c  stack.c  tree_hugger.c
